--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 .CTA:link,
 .CTA:visited {
-  background-color: #15aabf;
+  background-color: #1864ab;
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
@@ -58,7 +58,7 @@ body {
   border-radius: 10px;
 }
 .CTA:hover {
-  background-color: #343a40;
+  background-color: #1c7ed6;
 }
 
 .RightBar {
@@ -101,9 +101,9 @@ p {
   margin-bottom: 30px;
 }
 
-.skills li:nth-child(odd) {
+/* .skills li:nth-child(odd) {
   background-color: #e7f5ff;
-}
+} */
 
 .skills h3 {
   padding-bottom: 10px;
@@ -118,9 +118,9 @@ p {
   padding-bottom: 10px;
 }
 
-.info li:nth-child(odd) {
+/* .info li:nth-child(odd) {
   background-color: #e7f5ff;
-}
+} */
 h1 {
   color: #1864ab;
 }
@@ -159,7 +159,6 @@ h3 {
 
 h3 span,
 .duration {
-  font-weight: 700;
   color: #15aabf;
   font-weight: 200;
   text-transform: uppercase;
@@ -184,7 +183,7 @@ h3 span,
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   align-self: center;
   padding: 30px 0;
   /* margin: 30px auto; */
@@ -196,4 +195,107 @@ h3 span,
 }
 .footer h3 {
   text-transform: capitalize;
+}
+
+@media (max-width: 1000px) {
+  body {
+    line-height: 1.2;
+    width: 90%;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .ProfileImg {
+    grid-column: 1/-1;
+    margin: auto;
+  }
+  .Intro {
+    grid-column: 1/-1;
+    position: relative;
+  }
+  .Intro h1,
+  h3,
+  p {
+    text-align: center;
+  }
+
+  .conB05 h2 {
+    padding-bottom: 10px;
+    text-align: center;
+  }
+
+  .jobInfo h3 {
+    padding-left: 0;
+  }
+  h3 span,
+  .duration {
+    color: #15aabf;
+    font-weight: 200;
+  }
+  .duration {
+    padding-top: 10px;
+  }
+
+  .RightBar {
+    grid-column: 1/-1;
+    border-top: none;
+    padding-left: 0;
+    padding-top: 0;
+  }
+
+  .leftBar {
+    grid-column: 1/-1;
+    border-top: none;
+    text-align: center;
+  }
+
+  .footer {
+    border-top: none;
+  }
+  .leftBar {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-right: none;
+    border-top: none;
+    padding-top: 20px;
+  }
+  .jobList ul {
+    padding-left: 10px;
+    /* list-style: none; */
+  }
+  .jobInfo {
+    display: inline-block;
+    text-align: left;
+  }
+
+  .Intro {
+    padding-left: 0;
+  }
+
+  .Intro p {
+    border-bottom: none;
+  }
+
+  .CTA:link,
+  .CTA:visited {
+    text-align: center;
+    display: block;
+  }
+  h1 {
+    font-size: 35px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+
+  /* .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  } */
 }
